--- a/src/main/webapp/testpage.html
+++ b/src/main/webapp/testpage.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,12 +9,10 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="main.css"/>
 </head>
-<body class="w3-display-container">
-<div class="w3-display-middle w3-pale-green w3-padding">
-    <p>
-        <a href="runonserver?name=Vasya" >Vasya: Run on server</a><br>
-        <a href="runonserver?name=Petya" >Petya: Run on server</a>
-    </p>
+<body>
+<div class="w3-panel w3-pale-green w3-center">
+    Hello, World
 </div>
+<input name="var1" value="abc"/>
 </body>
 </html>
